--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
     "react": "^19.0.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-multi-carousel": "^2.8.5"
   },
